# InterPython_Workshop_Example

./: .gitignore  .pylintrc  OOP.ipynb  OOP_imports.ipynb  README.md  Tests.ipynb  exported_conda_env.yml  func-paradigm.ipynb  lc-package.py  lc_package.py  lcclasses_demo.ipynb  light-curve-analysis-ADD.ipynb  light-curve-analysis-full.ipynb  light-curve-analysis.ipynb  light_curve_analysis.ipynb  light_curve_tests.ipynb  new_notebook.ipynb  pyproject.toml  requirements.txt  test-development.ipynb  tests-development.ipynb
.github/workflows/: main.yaml  main.yml
data/: kepler_RRLyr.csv  lsst_RRLyr.csv  lsst_RRLyr.pkl  lsst_RRLyr_protocol_4.pkl
docs/: api.rst  conf.py  index.rst
docs/_build/doctrees/: api.doctree  environment.pickle  index.doctree  models.doctree  modules.doctree  usage.doctree  views.doctree
docs/_build/html/: .buildinfo  api.html  genindex.html  index.html  models.html  modules.html  objects.inv  search.html  searchindex.js  usage.html  views.html
docs/_build/html/_sources/: modules.rst.txt  usage.rst.txt
kernTest/: pip-selfcheck.json  pyvenv.cfg
lcanalyzer/: __init__.py  lightcurve.py  lightcurve_classes.py  models.py  models_full.py  plots.py  survey.py  views.py
lcanalyzer_oop/: plots.py  survey.py
lightcurves/: __init__.py  models.py
tests/: test_lcanalyzer_oop.py  test_models.py  test_models_full.py  test_patient.py
